# SimpleGameServer

./: .gitignore  .gitmodules  LICENSE  backend.cpp  backend.h  main.cpp
CMake/: CMakeLists.txt  Download.cmake  Playerlib.cmake  ThirdParty.cmake  boost.cmake
CMake/boost/: atomic.cmake  chrono.cmake  date_time.cmake  filesystem.cmake  log.cmake  program_options.cmake  serialization.cmake  system.cmake  thread.cmake
config/: config.cpp  config.h  config.json  options.cpp  options.h
ecs/: ecs.h  entity_base.cpp  entity_base.h  event_base.hpp  system_base.h  world_baseh.h
log/: log.cpp  log.h
network/: gate_base.cpp  gate_base.h  tcp_gate.cpp  tcp_gate.h
object/: component_names.h  game_object.cpp  game_object.h  game_object_component.cpp  game_object_component.h  object_helper.h  object_manager.cpp  object_manager.h
object/component/: schedule_component.cpp  schedule_component.h
object/connection/: conn_schedule_component.cpp  conn_schedule_component.h  connection_object.cpp  connection_object.h
object/player/: player_object.cpp  player_object.h
player/: player_object.cpp
schedule/: schedule.h
test/: test.cpp  test.h
